--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "vue-cli-service serve --open",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
@@ -12,7 +13,9 @@
     "axios": "^0.18.0",
     "element-ui": "^2.4.3",
     "highlight.js": "^9.12.0",
+    "lodash": "^4.17.10",
     "normalize-wheel": "^1.0.1",
+    "quill": "^1.3.6",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
     "vue-class-component": "^6.0.0",
@@ -23,6 +26,8 @@
   "devDependencies": {
     "@types/highlight.js": "^9.12.3",
     "@types/jest": "^22.0.1",
+    "@types/lodash": "^4.14.112",
+    "@types/quill": "^1.3.7",
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-pwa": "^3.0.0-beta.15",
     "@vue/cli-plugin-typescript": "^3.0.0-beta.15",
@@ -31,6 +36,8 @@
     "@vue/test-utils": "^1.0.0-beta.16",
     "babel-core": "7.0.0-bridge.0",
     "node-sass": "^4.9.0",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.1",
     "ts-jest": "^22.4.6",
     "vue-template-compiler": "^2.5.16"
