--- a/package.json
+++ b/package.json
@@ -12,21 +12,30 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.3",
+    "font-awesome": "^4.7.0",
     "highlight.js": "^9.12.0",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "normalize-wheel": "^1.0.1",
+    "normalize.css": "^8.0.0",
+    "nprogress": "^0.2.0",
     "quill": "^1.3.6",
+    "raf": "^3.4.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
     "vue-class-component": "^6.0.0",
+    "vue-i18n": "^8.0.0",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.1"
   },
   "devDependencies": {
     "@types/highlight.js": "^9.12.3",
     "@types/jest": "^22.0.1",
+    "@types/js-cookie": "^2.1.0",
     "@types/lodash": "^4.14.112",
+    "@types/nprogress": "^0.0.29",
     "@types/quill": "^1.3.7",
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-pwa": "^3.0.0-beta.15",
