--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "quill": "^1.3.6",
     "raf": "^3.4.0",
     "register-service-worker": "^1.0.0",
+    "screenfull": "^3.3.2",
     "vue": "^2.5.16",
     "vue-class-component": "^6.0.0",
     "vue-i18n": "^8.0.0",
@@ -37,6 +38,7 @@
     "@types/lodash": "^4.14.112",
     "@types/nprogress": "^0.0.29",
     "@types/quill": "^1.3.7",
+    "@types/screenfull": "^3.3.1",
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-pwa": "^3.0.0-beta.15",
     "@vue/cli-plugin-typescript": "^3.0.0-beta.15",
